--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,13 +32,10 @@ jobs:
           node-version: '18'
           cache: 'npm'
       - name: Install dependencies
-        working-directory: ./
         run: npm ci
       - name: Run linting
-        working-directory: ./
         run: npm run lint
       - name: Run tests
-        working-directory: ./
         run: npm test
       - name: Archive test results
         if: always()
@@ -53,6 +50,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/release/'))
+    outputs:
+      commit_sha: ${{ steps.export-sha.outputs.commit_sha }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -62,22 +61,23 @@ jobs:
           node-version: '18'
           cache: 'npm'
       - name: Install dependencies
-        working-directory: ./
         run: npm ci
       - name: Build frontend
         env:
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
         run: npm run build
+      - name: Export COMMIT_SHA
+        id: export-sha
+        run: echo "commit_sha=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_OUTPUT
       - name: Build and push Docker image
         run: |
-          COMMIT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
-          echo "COMMIT_SHA=$COMMIT_SHA" >> $GITHUB_ENV
+          COMMIT_SHA=${{ steps.export-sha.outputs.commit_sha }}
           docker build --no-cache \
             -t guilherme310402/app_presente_front:$COMMIT_SHA \
             -t guilherme310402/app_presente_front:latest .
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:$COMMIT_SHA || { echo "Failed to push Docker image with COMMIT_SHA"; exit 1; }
-          docker push guilherme310402/app_presente_front:latest || { echo "Failed to push Docker image with latest tag"; exit 1; }
+          docker push guilherme310402/app_presente_front:$COMMIT_SHA
+          docker push guilherme310402/app_presente_front:latest
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -92,7 +92,7 @@ jobs:
   deploy-stage:
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/release/'))
+    if: github.ref == 'refs/heads/dev'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -112,79 +112,24 @@ jobs:
             https://storage.googleapis.com/gke-release/gke-gcloud-auth-plugin/linux/amd64/gke-gcloud-auth-plugin
           sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
           echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
-      - name: Configure kubectl
+      - name: Configure kubectl for stage
         run: |
-          if [[ "${GITHUB_REF##*/}" == "main" ]]; then
-            gcloud container clusters get-credentials devops-cluster \
-              --region us-central1 \
-              --project app-chamada-5706
-          else
-            gcloud container clusters get-credentials stage-app-presente \
-              --region us-east1 \
-              --project app-chamada-5706
-          fi
+          gcloud container clusters get-credentials stage-app-presente \
+            --region us-east1 \
+            --project app-chamada-5706
       - name: Deploy to stage
         run: |
-          # Check if files exist
-          if [ ! -f "k8s/stage/frontend-deployment.yaml" ]; then
-            echo "Error: k8s/stage/frontend-deployment.yaml not found"
-            exit 1
-          fi
-          if [ ! -f "k8s/stage/frontend-service.yaml" ]; then
-            echo "Error: k8s/stage/frontend-service.yaml not found"
-            exit 1
-          fi
-
-          COMMIT_SHA=${{ env.COMMIT_SHA }}
+          COMMIT_SHA=${{ needs.build.outputs.commit_sha }}
           kubectl apply -f k8s/stage/frontend-deployment.yaml -n stage-app-presente
           kubectl apply -f k8s/stage/frontend-service.yaml -n stage-app-presente
           kubectl set image deployment/app-presente-front -n stage-app-presente app-presente-front=guilherme310402/app_presente_front:$COMMIT_SHA
-          kubectl patch deployment/app-presente-front -n stage-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
           kubectl rollout restart deployment/app-presente-front -n stage-app-presente
-
-          # Debug: Check pod status before rollout
-          echo "Checking pod status before rollout..."
-          kubectl get pods -n stage-app-presente
-
-          # Debug: Describe pods in Terminating state (if any)
-          echo "Describing pods in Terminating state (if any)..."
-          TERMINATING_PODS=$(kubectl get pods -n stage-app-presente --field-selector=status.phase!=Running -o name | grep app-presente-front || true)
-          if [ ! -z "$TERMINATING_PODS" ]; then
-            for pod in $TERMINATING_PODS; do
-              echo "Describing $pod..."
-              kubectl describe $pod -n stage-app-presente
-            done
-          else
-            echo "No pods in Terminating state found."
-          fi
-
-          # Force delete stuck pods if they don't terminate within 60 seconds
-          echo "Waiting 60 seconds for pods to terminate..."
-          sleep 60
-          TERMINATING_PODS=$(kubectl get pods -n stage-app-presente --field-selector=status.phase!=Running -o name | grep app-presente-front || true)
-          if [ ! -z "$TERMINATING_PODS" ]; then
-            echo "Force deleting stuck pods..."
-            for pod in $TERMINATING_PODS; do
-              kubectl delete $pod -n stage-app-presente --force --grace-period=0
-            done
-          fi
-
-          # Debug: Check pod status after attempting to resolve termination
-          echo "Checking pod status after termination handling..."
-          kubectl get pods -n stage-app-presente
-
-          # Debug: Describe the deployment
-          echo "Describing deployment..."
-          kubectl describe deployment app-presente-front -n stage-app-presente
-
-          # Wait for rollout with increased timeout
-          echo "Waiting for rollout to complete..."
-          kubectl rollout status deployment/app-presente-front -n stage-app-presente --timeout=600s
+          kubectl rollout status deployment/app-presente-front -n stage-app-presente --timeout=300s
 
   deploy-production:
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -204,74 +149,19 @@ jobs:
             https://storage.googleapis.com/gke-release/gke-gcloud-auth-plugin/linux/amd64/gke-gcloud-auth-plugin
           sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
           echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
-      - name: Configure kubectl
+      - name: Configure kubectl for production
         run: |
-          if [[ "${GITHUB_REF##*/}" == "main" ]]; then
-            gcloud container clusters get-credentials devops-cluster \
-              --region us-central1 \
-              --project app-chamada-5706
-          else
-            gcloud container clusters get-credentials stage-app-presente \
-              --region us-east1 \
-              --project app-chamada-5706
-          fi
+          gcloud container clusters get-credentials devops-cluster \
+            --region us-central1 \
+            --project app-chamada-5706
       - name: Deploy to production
         run: |
-          # Check if files exist
-          if [ ! -f "k8s/production/frontend-deployment.yaml" ]; then
-            echo "Error: k8s/production/frontend-deployment.yaml not found"
-            exit 1
-          fi
-          if [ ! -f "k8s/production/frontend-service.yaml" ]; then
-            echo "Error: k8s/production/frontend-service.yaml not found"
-            exit 1
-          fi
-
-          COMMIT_SHA=${{ env.COMMIT_SHA }}
+          COMMIT_SHA=${{ needs.build.outputs.commit_sha }}
           kubectl apply -f k8s/production/frontend-deployment.yaml -n production-app-presente
           kubectl apply -f k8s/production/frontend-service.yaml -n production-app-presente
           kubectl set image deployment/app-presente-front -n production-app-presente app-presente-front=guilherme310402/app_presente_front:$COMMIT_SHA
-          kubectl patch deployment/app-presente-front -n production-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
           kubectl rollout restart deployment/app-presente-front -n production-app-presente
-
-          # Debug: Check pod status before rollout
-          echo "Checking pod status before rollout..."
-          kubectl get pods -n production-app-presente
-
-          # Debug: Describe pods in Terminating state (if any)
-          echo "Describing pods in Terminating state (if any)..."
-          TERMINATING_PODS=$(kubectl get pods -n production-app-presente --field-selector=status.phase!=Running -o name | grep app-presente-front || true)
-          if [ ! -z "$TERMINATING_PODS" ]; then
-            for pod in $TERMINATING_PODS; do
-              echo "Describing $pod..."
-              kubectl describe $pod -n production-app-presente
-            done
-          else
-            echo "No pods in Terminating state found."
-          fi
-
-          # Force delete stuck pods if they don't terminate within 60 seconds
-          echo "Waiting 60 seconds for pods to terminate..."
-          sleep 60
-          TERMINATING_PODS=$(kubectl get pods -n production-app-presente --field-selector=status.phase!=Running -o name | grep app-presente-front || true)
-          if [ ! -z "$TERMINATING_PODS" ]; then
-            echo "Force deleting stuck pods..."
-            for pod in $TERMINATING_PODS; do
-              kubectl delete $pod -n production-app-presente --force --grace-period=0
-            done
-          fi
-
-          # Debug: Check pod status after attempting to resolve termination
-          echo "Checking pod status after termination handling..."
-          kubectl get pods -n production-app-presente
-
-          # Debug: Describe the deployment
-          echo "Describing deployment..."
-          kubectl describe deployment app-presente-front -n production-app-presente
-
-          # Wait for rollout with increased timeout
-          echo "Waiting for rollout to complete..."
-          kubectl rollout status deployment/app-presente-front -n production-app-presente --timeout=600s
+          kubectl rollout status deployment/app-presente-front -n production-app-presente --timeout=300s
 
   release-notification:
     if: startsWith(github.ref, 'refs/heads/release/')
